# h5jpegls

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  conanfile.py  h5jpegls.cc  threadpool.h
.github/workflows/: cmake-build.yml  conan-package.yml  set_env_vars.sh  set_env_vars_package.sh
.github/workflows/conan/: conan.conf
.github/workflows/conan/profiles/: apple-clang12  apple-clang13  gcc10  vs2019-clang
cmake/: h5jpegls_version.cmake
include/h5jpegls/: h5jpegls.h
src/: CMakeLists.txt  h5jpegls.cpp  tile.cpp  tile.hpp  version.hpp.in
tags/v0.1/: h5jpegls.cc  threadpool.h
tags/v0.2/: h5jpegls.cc
test/: CMakeLists.txt  requirements.txt  test.cpp  test.py  test_tile.cpp
test/data/: test.h5  test_compressed_v0.2.h5
test_package/: CMakeLists.txt  conanfile.py  example.cpp
trunk/: README.md  h5jpegls.cc
